--- a/app/.htaccess
+++ b/app/.htaccess
@@ -2,7 +2,10 @@ RewriteEngine On
 RewriteBase /
 
 # Allow access to the media folder
+
 RewriteRule ^media/ - [L]
+RewriteRule ^src/dist/ - [L]
 
 # Rewrite all other requests to index.php
+
 RewriteRule ^ index.php [L]
